--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -141,19 +141,49 @@ strong {
 }
 
 /* line 3, ../sass/_listings.scss */
+#listings .project-title {
+  font-weight: bold;
+}
+/* line 7, ../sass/_listings.scss */
+#listings .listing-nav {
+  overflow: hidden;
+}
+/* line 10, ../sass/_listings.scss */
+#listings .listing-nav a {
+  padding: 10px;
+  color: #fff;
+  text-transform: uppercase;
+  float: left;
+  border: 1px solid #fff;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  width: 35px;
+}
+/* line 20, ../sass/screen.scss */
+#listings .listing-nav a.selected {
+  background-color: #fff;
+  color: #252525;
+}
+/* line 15, ../sass/_listings.scss */
+#listings .projects .project {
+  display: inline-block;
+  margin-right: 20px;
+}
+/* line 20, ../sass/_listings.scss */
 #listings .project:not(:last-child) {
   margin-bottom: 20px;
   padding-bottom: 10px;
   border-bottom: 1px solid rgba(227, 213, 191, 0.7);
 }
-/* line 9, ../sass/_listings.scss */
+/* line 26, ../sass/_listings.scss */
 #listings .sidebar {
   padding: 50px 15px 30px;
   text-align: center;
   background-color: #252525;
 }
 @media screen and (min-width: 1024px) {
-  /* line 9, ../sass/_listings.scss */
+  /* line 26, ../sass/_listings.scss */
   #listings .sidebar {
     padding: 0;
     position: fixed;
@@ -162,47 +192,90 @@ strong {
     padding-top: 50px;
     text-align: left;
   }
-  /* line 23, ../sass/_listings.scss */
+  /* line 40, ../sass/_listings.scss */
   #listings .sidebar .header {
     margin: 50% 20px 20px;
   }
 }
-/* line 29, ../sass/_listings.scss */
-#listings .sidebar h1 {
+/* line 46, ../sass/_listings.scss */
+#listings .sidebar h1, #listings .sidebar h2 {
   color: #fff;
 }
-/* line 32, ../sass/_listings.scss */
-#listings .sidebar h2 {
-  color: #BBAE99;
-}
-/* line 36, ../sass/_listings.scss */
+/* line 50, ../sass/_listings.scss */
 #listings .content {
   padding: 15px;
 }
 @media screen and (min-width: 1024px) {
-  /* line 36, ../sass/_listings.scss */
+  /* line 50, ../sass/_listings.scss */
   #listings .content {
     margin-left: 25%;
     padding: 30px;
   }
 }
+/* line 61, ../sass/_listings.scss */
+#listings .image-size li a {
+  padding: 10px;
+  color: #fff;
+  text-transform: uppercase;
+  float: left;
+  border: 1px solid #fff;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #fff;
+}
+/* line 20, ../sass/screen.scss */
+#listings .image-size li a.selected {
+  background-color: #fff;
+  color: #252525;
+}
+/* line 64, ../sass/_listings.scss */
+#listings .image-size li a.selected {
+  background-color: #fff;
+  color: #252525;
+}
 
-/* line 15, ../sass/screen.scss */
+/* line 1, ../sass/_pagination.scss */
+.pagination-container {
+  overflow: hidden;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+/* line 8, ../sass/_pagination.scss */
+.pagination li a {
+  padding: 10px;
+  color: #252525;
+  text-transform: uppercase;
+  text-decoration: none;
+  float: left;
+  border: 1px solid #252525;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+/* line 20, ../sass/_pagination.scss */
+.pagination li.active a {
+  background-color: #252525;
+  color: #fff;
+}
+
+/* line 33, ../sass/screen.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 18, ../sass/screen.scss */
+/* line 36, ../sass/screen.scss */
 html {
   overflow-y: scroll;
 }
 
-/* line 22, ../sass/screen.scss */
+/* line 40, ../sass/screen.scss */
 .pure-g {
   margin-bottom: 20px;
 }
 
-/* line 26, ../sass/screen.scss */
+/* line 44, ../sass/screen.scss */
 .top-nav {
   background-color: #BBAE99;
   padding: 15px;
@@ -210,50 +283,21 @@ html {
   z-index: 99;
   overflow: hidden;
 }
-/* line 33, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 .top-nav .menu-heading {
   font-size: 18px;
 }
-/* line 36, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 .top-nav a {
   color: #333;
 }
-/* line 39, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 .top-nav .menu-list {
   font-size: 18px;
   float: right;
 }
-/* line 42, ../sass/screen.scss */
+/* line 60, ../sass/screen.scss */
 .top-nav .menu-list > li {
   display: inline-block;
   padding-left: 10px;
-}
-
-/* line 48, ../sass/screen.scss */
-.listing-nav {
-  overflow: hidden;
-}
-/* line 51, ../sass/screen.scss */
-.listing-nav a {
-  padding: 10px;
-  color: white;
-  text-transform: uppercase;
-  float: left;
-  border: 1px solid white;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  text-align: center;
-  width: 20px;
-  width: 35px;
-}
-
-/* line 64, ../sass/screen.scss */
-.image-size {
-  color: white;
-}
-
-/* line 67, ../sass/screen.scss */
-.projects .project {
-  float: left;
-  margin-right: 20px;
 }
